@@ -1,6 +1,6 @@
 Chunky.appname=Chunky
 Chunky.version=1.1.11 snapshot
-Chunky.revision=R20130420
+Chunky.revision=R20130422
 Chunky.icon=/chunky-icon.png
 Controls.SelectWorld_lbl=Select World
 Controls.DeleteSelected_lbl=Delete Selected Chunks
